--- a/app/templates/mixins/mixins.pug
+++ b/app/templates/mixins/mixins.pug
@@ -25,3 +25,8 @@ mixin prevs-row-el(json)
     .prevs-box-row-el
       +icon(data.icon, 'svg')(class=data.icon)
       p #{data.text}
+
+mixin footer-box-nav-social-group-link(json)
+  each data in json
+    a.footer-box-nav-social-group-link(href=data.link)
+      +icon(data.ico, 'svg')
