рефактор кода, начал делить все на модули, для форм отдельные миксины

--- a/app/scss/base/default.scss
+++ b/app/scss/base/default.scss
@@ -60,7 +60,7 @@ body {
 
 body {
   font-size: 16px; // Убираем проблему с отступами между inline-элементами
-  color: $color-basic;
+  color: $color-text-main;
   overflow: hidden;
   *,
   *::after,
