--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -1,5 +1,9 @@
 extends ../layouts/default.pug
 
+include ../modules/subscription.pug
+include ../modules/about.pug
+include ../modules/footer.pug
+
 block variables
  -var pageTitle='Партнерам'
 
@@ -39,92 +43,16 @@ block content
           h2 Задайте вопрос или оставьте заявку на сотрудничество
         form.contact-box-form
           .contact-box-form-el
-            .main-field
-              input(type="text" id="name" placeholder="Ваше имя")
-              label(for="name" class="main-field-name") Ваше имя
-              label(for="name")
-            .main-field
-              input(type="text" id="phone" placeholder="Ваш телефон")
-              label(for="phone" class="main-field-name") Ваш телефон
-              label(for="phone" class="main-field-addon") необязательно
-            .main-field
-              input(type="email" id="email" placeholder="Ваша почта для ответа")
-              label(for="email" class="main-field-name") Ваша почта для ответа
-              label(for="email")
+            +field('text', 'name', 'Ваше имя', 'Ваше имя', '')
+            +field('text', 'phone', 'Ваш телефон', 'Ваш телефон', 'необязательно')
+            +field('email', 'email', 'Ваша почта для ответа', 'Ваша почта для ответа', '')
           .contact-box-form-el
-            .main-field
-              textarea(name="question", cols="29", rows="10")
-              label(for="phone" class="main-field-name") Ваш вопрос
-              label(for="phone" class="main-field-addon") необязательно
+            +textarea('question', '29', '10', 'Ваш вопрос', 'необязательно')
           .contact-box-form-el
-            .main-checkbox
-              input(type="checkbox" id="pricelist" name="pricelist")
-              label(for="pricelist" class="main-checkbox-name")
-                +icon('checkbox', 'svg')
-                p Хочу получить прайс-лист
-            .main-checkbox
-              input(type="checkbox" id="agree" name="agree")
-              label(for="agree" class="main-checkbox-name")
-                +icon('checkbox', 'svg')
-                p Согласие на обработку персональных данных в соответствии с политикой конфиденциальности
+            +checkbox('pricelist', 'pricelist', 'Хочу получить прайс-листи')
+            +checkbox('agree', 'agree', 'Согласие на обработку персональных данных в соответствии с политикой конфиденциальности')
           .contact-box-form-el
               button(type="submit" name="send" value="1") Отправить +
-    section.about
-      .content.about-box
-        .about-box-rectangle
-          h2 О нас
-          a(href="#about")
-            +icon('arrow', 'svg')
-    section.subscription
-      .content.subscription-box
-        form.subscription-box-form
-          h2 Подпишитесь на нас
-          .main-field
-            input(type="email" id="email" placeholder="Введите почту")
-            label(for="name" class="main-field-name") Ваше имя
-            label(for="phone" class="main-field-addon")
-              button
-                +icon('arrow', 'svg')
-        .subscription-box-marquee
-    footer.footer
-      .content.footer-box
-        .footer-box-row
-          .footer-box-nav-production
-            .footer-box-nav-production-left
-              .footer-box-nav-production-left-group
-                a(href="#") Продукция
-                .footer-box-nav-production-left-group-desc Сыры, масла, сыворотка
-              .footer-box-nav-production-left-group
-                a(href="#") О нас
-                .footer-box-nav-production-left-group-desc Кто мы и как работаем
-            .footer-box-nav-production-right
-              a(href="#") Где купить
-              a(href="#") Новости и акции
-              a(href="#") Партнерам
-              a(href="#") Контакты
-          .footer-box-nav-contact
-            .footer-box-nav-contact-group
-              .footer-box-nav-contact-group-name Адрес
-              .footer-box-nav-contact-group-desc 385600, Россия, Республика Адыгея, Гиагинский район, станица Гиагинская, ул. Ленина, 142
-            .footer-box-nav-contact-group
-              .footer-box-nav-contact-group-name Часы работы
-              .footer-box-nav-contact-group-desc Понедельник ­–­­ Пятница 8:00 ­–­­ 17:00
-            .footer-box-nav-contact-group
-              .footer-box-nav-contact-group-name Выходные дни
-              .footer-box-nav-contact-group-desc Суббота, Воскресенье
-          .footer-box-nav-tel
-            .footer-box-nav-tel-group
-              .footer-box-nav-tel-group-desc Служба поддержки потребителей
-              .footer-box-nav-tel-group-number 8 800 250-93-93
-            a(href="") Задать вопрос
-          .footer-box-nav-adderlinks
-            a(href="#") Политика конфиденциальности
-            a(href="#") Положение о персональных данных
-            a(href="#") СОУТ
-          .footer-box-nav-social
-            .footer-box-nav-social-title Мы в социальных сетях
-            .footer-box-nav-social-group
-              +footer-box-nav-social-group-link(getData('footer'))
-          .footer-box-nav-copyright © ОАО Молочный завод «Гиагинский» 2020 г.
-          .footer-box-nav-worked Сделано в 
-            a(href="#") CloudMill
+    +about().bg-additional
+    +subscription().bg-additional
+    +footer().bg-additional
