--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,6 +11,10 @@
 @import "modules/footer";
 @import "modules/subscription";
 @import "modules/about";
+@import "modules/contact";
+@import "modules/prevs";
+@import "modules/info_partners";
+@import "modules/header";
 
 .bg-white {
   background-color: $background-white;
@@ -18,6 +22,11 @@
 
 .bg-additional {
   background-color: $background-additional;
+}
+
+.content {
+  max-width: $max-width-main;
+  margin: 0 auto;
 }
 
 .container {
@@ -38,18 +47,11 @@
   }
 }
 
-.content {
-  &.main-box, &.info-box, &.prevs-box, &.contact-box {
-    max-width: $max-width-main;
-    margin: 0 auto;
-  } 
-}
-
 section {
   padding-right: $min-main-padding;
   padding-left: $min-main-padding;
   
-  &.main, &.contact {
+  &.main {
     background-color: $background-additional;
   }
 
@@ -74,28 +76,6 @@ section {
     }
   }
 
-  &.prevs {
-    padding-top: 130px;
-    position: relative;
-
-    &::before {
-      display: block;
-      content: "";
-      width: 100%;
-      height: 50px;
-      position: absolute;
-      left: 0;
-      bottom: -27px;
-      background-size: cover;
-      background: #ffffff;
-      border-radius: 50%/50%;
-    }
-
-    @include screen('xs', 'max') {
-      padding-top: 50px;
-    }
-  }
-
   &.contact {
     padding-top: 120px;
 
@@ -110,95 +90,6 @@ section {
 
   &.subscription {
     padding-top: 200px;
-  }
-}
-
-.header {
-  width: calc(100% - 40px);
-
-  @include screen('xs', 'max') {
-    width: 100%;
-  }
-
-  position: absolute;
-  margin-top: 30px;
-  padding-right: $min-main-padding;
-  padding-left: $min-main-padding;
-  box-sizing: border-box;
-
-  &-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1400px;
-    margin: 0 auto;
-    position: relative;
-
-    @include screen('xs', 'max') {
-      margin: -25px;
-    }
-
-    &-logotype {
-        @include screen('xs', 'max') {
-          transform: scale(0.7);
-        }
-    }
-  
-    &-nav {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-around;
-      width: 50%;
-      @include screen('custom-660', 'max') {
-        &.lg {
-          display: none;
-        }
-      }
-  
-      &-el {
-        text-align: center;
-        font-style: normal;
-        font-weight: normal;
-        color: $color-text-main;
-        font-family: 'CeraPro';
-  
-        &-link {
-          font-size: 26px;
-          line-height: 33px;
-          transition: 0.2s;
-  
-          @include screen('md', 'max') {
-            font-size: 22px;
-          }
-  
-          &:hover {
-            color: $color-text-complementary-two;
-          }
-        }
-  
-        &-desc {
-          font-size: 13px;
-          line-height: 33px;
-  
-          @include screen('md', 'max') {
-            font-size: 10px;
-            line-height: 30px;
-          }
-  
-          @include screen('custom-800', 'max') {
-            display: none;
-          }
-        }
-      }
-  
-      &-button {
-        @include screen('xs', 'max') {
-          transform: scale(.7);
-        }
-      }
-    }
   }
 }
 
@@ -321,328 +212,6 @@ section {
       margin-bottom: 90px;
       line-height: 110%;
       width: 100%;
-    }
-  }
-}
-
-.info-box {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-
-  @include screen('custom-860', 'max') {
-    grid-template-rows: auto 1fr 1fr auto;
-  }
-
-  &-header {
-    grid-column: 2 / 4;
-    width: 384px;
-
-    @include screen('custom-860', 'max') {
-      grid-column: 1 / 4;
-      font-size: 34px;
-      width: 100%;
-    }
-
-    & > p {
-      font-family: 'PFRegalTextPro';
-      font-size: 52px;
-
-      @include screen('sm', 'max') {
-        font-size: 34px;
-      }
-      
-      @include screen('xs', 'max') {
-        width: 100%;
-        font-size: 18px;
-      }   
-    }
-  }
-
-  &-el {
-    grid-row: 2 / 3;
-
-    @include screen('sm', 'max') {
-      grid-row: unset;
-      grid-column: 1 / 4;
-    }
-
-    & > h3 {
-      font-family: 'Lineatura';
-      color: $color-text-complementary-two;
-      font-size: 110px;
-      margin-bottom: 59px;
-  
-      @include screen('md', 'max') {
-        font-size: 100px;
-        margin-bottom: 39px;
-      }
-  
-      & > sup {
-        font-size: 20px;
-        vertical-align: super;
-        position: relative;
-        left: -38px;
-        top: -28px;
-  
-        @include screen('md', 'max') {
-          font-size: 16px;
-        }
-      }
-    }
-
-    & > p {
-      font-family: 'CeraPro';
-      color: $color-text-main;
-      font-size: 20px;
-      line-height: 30px;
-      display: flex;
-      align-items: center;
-  
-      @include screen('md', 'max') {
-        font-size: 17px;
-      }
-  
-      &::before {
-        display: block;
-        content: '';
-        width: 25px;
-        height: 4px;
-        margin-right: 15px;
-        background: $color-text-complementary-two;
-      }
-    }
-  }
-
-  &-details {
-    display: grid;
-    align-items: end;
-    grid-column: 2 / 3;
-    align-items: center;
-    position: relative;
-
-    @include screen('sm', 'max') {
-      grid-column: 1 / 4;
-      text-align: center;
-      margin-top: 60px;
-      margin-bottom: 90px
-    }
-
-    & > a {
-      display: block;
-      font-size: 20px;
-      font-family: 'CeraPro';
-      position: relative;
-      z-index: 1;
-
-      &::before {
-        position: absolute;
-        content: '';
-        background: url('../images/download-presentation-border.svg');
-        width: 209px;
-        height: 10px;
-        display: block;
-        right: 50%;
-        bottom: -50%;
-        transform: translateX(50%);
-        margin-top: 10px;
-        background-repeat: no-repeat;
-         
-        @include screen('sm', 'min') {
-          transform: translateX(0%);
-        }
-      }
-    }
-  }
-}
-
-.prevs-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding-bottom: 187px;
-
-  @include screen('xs', 'max') {
-    align-items: flex-start;
-  }
-
-  &-info {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 100px;
-
-    @include screen('xs', 'max') {
-      margin-bottom: 40px;
-    }
-
-    width: 100%;
-
-    & > i {
-      @include screen('custom-660', 'max') {
-        display: none;
-      }
-    }
-
-    @include screen('xs', 'max') {
-      margin-bottom: 40px;
-    }
-
-    & > h2 {
-      font-family: 'PFRegalTextPro';
-      font-size: 52px;
-      color: $color-text-main;
-      width: 839px;
-
-      @include screen('custom-660', 'max') {
-        font-size: 34px;
-      }
-      
-      @include screen('xs', 'max') {
-        font-size: 24px;
-      }
-    }
-  }
-
-  &-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    position: relative;
-
-    @include screen('xs', 'max') {
-      flex-direction: column;
-    }
-
-    &::before {
-      position: absolute;
-      content: '';
-      background: url('../images/section-prev-background.svg');
-      width: 985px;
-      height: 380px;
-      display: block;
-      bottom: 0%;
-      right: -10%;
-      background-repeat: no-repeat;
-      z-index: -1;
-
-      @include screen('md', 'max') {
-        display: none;
-      }
-    }
-
-    &-el {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      width: 26%;
-      margin-bottom: 46px;
-      position: relative;
-      box-sizing: border-box;
-
-      @include screen('md', 'max') {
-        margin-bottom: 40px;
-      }
-
-      @include screen('custom-1235', 'max') {
-        width: calc(100% / 2);
-      }
-      
-      @include screen('custom-660', 'max') {
-        width: calc(100% - 80px); //Какой-то мегакостыль временный, иначе все криво работает..
-      }
-
-      & > .svg-pack {
-        @include screen('md', 'max') {
-          left: 50%;
-          transform: scale(.7) translateX(-60%);
-          position: absolute;
-          padding-top: 10px;
-        }
-      }
-
-      &:nth-child(n+4) {
-        @include screen('md', 'min') {
-          margin-bottom: 0px;
-        }
-      }
-
-      &-icon {
-        width: 100px;
-        height: 100px;
-        margin-bottom: 26px;
-        display: flex;
-        align-items: flex-end;
-      }
-
-      p {
-        font-family: 'CeraPro';
-        font-size: 18px;
-        color: $color-text-main;
-        line-height: 24px;
-        font-weight: 500;
-      }
-    }
-  }
-}
-
-.contact-box {
-  &-header {
-    width: 839px;
-
-    @include screen('custom-660', 'max') {
-      width: auto;
-    }
-
-    margin-bottom: 80px;
-    h2 {
-      font-family: 'PFRegalTextPro';
-      font-size: 52px;
-      color: $color-text-main;
-      line-height: 52px;
-
-      @include screen('custom-660', 'max') {
-        font-size: 34px;
-        line-height: 33px;
-      }
-      
-      @include screen('xs', 'max') {
-        font-size: 30px;
-      }
-    }
-  }
-
-  &-form {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-between;
-    flex-flow: wrap;
-
-    @include screen('custom-660', 'max') {
-      flex-direction: column;
-    }
-
-    &-el {
-      width: 45%;
-      @include screen('custom-660', 'max') {
-        width: 100%;
-      }
-      display: flex;
-      flex-direction: column;
-      font-family: 'CeraPro';
-      align-items: start;
-      justify-content: flex-end;
-
-      & > .main-field {
-        width: 100%;
-      }
     }
   }
 }
