--- a/app/templates/modules/subscription.pug
+++ b/app/templates/modules/subscription.pug
@@ -4,9 +4,9 @@ mixin subscription
       form.subscription-box-form
         h2 Подпишитесь на нас
         .main-field
-          input(type="email" id="email" placeholder="Введите почту")
-          label(for="name" class="main-field-name") Ваше имя
-          label(for="phone" class="main-field-addon")
+          input(type="email" id="email-sub" placeholder="Введите почту")
+          label(for="email-sub" class="main-field-name") Ваше имя
+          label(class="main-field-addon")
             button
               +icon('arrow', 'svg')
       .subscription-box-marquee
