--- a/app/templates/modules/info-partners.pug
+++ b/app/templates/modules/info-partners.pug
@@ -4,11 +4,11 @@ mixin info-box-el(json)
       h3 #{data.number} <sup>#{data.units}</sup>
       p #{data.text}
       
-mixin info_partners
+mixin info-partners
   section.info#info&attributes(attributes)
     .content.info-box
       .info-box-header
         p За 2019 год мы произвели
-      +info-box-el(getData('info'))
+      +info-box-el(getData('info-partners'))
       .info-box-details
         a(href="#details") Скачать презентацию
