[ADDED/UPDATE/FEATURE] добавлен ghPages, обновление главной страницы, ghPages без теста

--- a/app/scss/base/svgSprite.scss
+++ b/app/scss/base/svgSprite.scss
@@ -8,7 +8,7 @@
     display: inline-block;
     background-image: url("../images/sprite.svg");
     background-repeat: no-repeat;
-    background-size: 40.3em 126.5em;
+    background-size: 74.4em 200.6em;
 }
 
 .no-svg .svg-icon:before {
@@ -53,8 +53,17 @@
 
 
 
-  .svg-icon.svg-facebook:before {
+  .svg-icon.svg-cheese-main-slider-1:before {
       background-position: 0em -21.2em;
+      width: 74.4em;
+      height: 74.1em;
+  }
+
+
+
+
+  .svg-icon.svg-facebook:before {
+      background-position: 0em -95.3em;
       width: 1.1em;
       height: 2.3em;
   }
@@ -63,7 +72,7 @@
 
 
   .svg-icon.svg-instagram:before {
-      background-position: 0em -23.5em;
+      background-position: 0em -97.6em;
       width: 1.8em;
       height: 1.8em;
   }
@@ -72,7 +81,7 @@
 
 
   .svg-icon.svg-logotype:before {
-      background-position: 0em -25.3em;
+      background-position: 0em -99.4em;
       width: 15.1em;
       height: 9.6em;
   }
@@ -81,7 +90,7 @@
 
 
   .svg-icon.svg-navigation:before {
-      background-position: 0em -34.9em;
+      background-position: 0em -109em;
       width: 7.9em;
       height: 7.8em;
   }
@@ -90,7 +99,7 @@
 
 
   .svg-icon.svg-ok:before {
-      background-position: 0em -42.7em;
+      background-position: 0em -116.8em;
       width: 1.4em;
       height: 2.4em;
   }
@@ -99,7 +108,7 @@
 
 
   .svg-icon.svg-pack:before {
-      background-position: 0em -45.1em;
+      background-position: 0em -119.2em;
       width: 40.3em;
       height: 24.2em;
   }
@@ -108,7 +117,7 @@
 
 
   .svg-icon.svg-presentation:before {
-      background-position: 0em -69.3em;
+      background-position: 0em -143.4em;
       width: 7.8em;
       height: 9.8em;
   }
@@ -117,7 +126,7 @@
 
 
   .svg-icon.svg-prevslogo:before {
-      background-position: 0em -79.1em;
+      background-position: 0em -153.2em;
       width: 24.2em;
       height: 24.3em;
   }
@@ -126,7 +135,7 @@
 
 
   .svg-icon.svg-statistics:before {
-      background-position: 0em -103.4em;
+      background-position: 0em -177.5em;
       width: 10.3em;
       height: 7em;
   }
@@ -135,7 +144,7 @@
 
 
   .svg-icon.svg-twitter:before {
-      background-position: 0em -110.4em;
+      background-position: 0em -184.5em;
       width: 2em;
       height: 1.8em;
   }
@@ -144,7 +153,7 @@
 
 
   .svg-icon.svg-vk:before {
-      background-position: 0em -112.2em;
+      background-position: 0em -186.3em;
       width: 2.6em;
       height: 1.6em;
   }
@@ -153,7 +162,7 @@
 
 
   .svg-icon.svg-vote:before {
-      background-position: 0em -113.8em;
+      background-position: 0em -187.9em;
       width: 12.1em;
       height: 11em;
   }
@@ -162,7 +171,7 @@
 
 
   .svg-icon.svg-wikipedia:before {
-      background-position: 0em -124.8em;
+      background-position: 0em -198.9em;
       width: 2.8em;
       height: 1.7em;
   }
