--- a/app/scss/base/pngSprite.scss
+++ b/app/scss/base/pngSprite.scss
@@ -9,33 +9,22 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$icon-logo-name: 'icon-logo';
-$icon-logo-x: 1056px;
-$icon-logo-y: 0px;
-$icon-logo-offset-x: -1056px;
-$icon-logo-offset-y: 0px;
-$icon-logo-width: 696px;
-$icon-logo-height: 692px;
-$icon-logo-total-width: 1752px;
-$icon-logo-total-height: 992px;
-$icon-logo-image: '../images/sprite.png';
-$icon-logo: (1056px, 0px, -1056px, 0px, 696px, 692px, 1752px, 992px, '../images/sprite.png', 'icon-logo', );
-$icon-loog-full-name: 'icon-loog full';
-$icon-loog-full-x: 0px;
-$icon-loog-full-y: 0px;
-$icon-loog-full-offset-x: 0px;
-$icon-loog-full-offset-y: 0px;
-$icon-loog-full-width: 1056px;
-$icon-loog-full-height: 992px;
-$icon-loog-full-total-width: 1752px;
-$icon-loog-full-total-height: 992px;
-$icon-loog-full-image: '../images/sprite.png';
-$icon-loog-full: (0px, 0px, 0px, 0px, 1056px, 992px, 1752px, 992px, '../images/sprite.png', 'icon-loog full', );
-$spritesheet-width: 1752px;
-$spritesheet-height: 992px;
+$icon-cheese-main-slider-1-name: 'icon-cheese-main-slider-1';
+$icon-cheese-main-slider-1-x: 0px;
+$icon-cheese-main-slider-1-y: 0px;
+$icon-cheese-main-slider-1-offset-x: 0px;
+$icon-cheese-main-slider-1-offset-y: 0px;
+$icon-cheese-main-slider-1-width: 557px;
+$icon-cheese-main-slider-1-height: 633px;
+$icon-cheese-main-slider-1-total-width: 557px;
+$icon-cheese-main-slider-1-total-height: 633px;
+$icon-cheese-main-slider-1-image: '../images/sprite.png';
+$icon-cheese-main-slider-1: (0px, 0px, 0px, 0px, 557px, 633px, 557px, 633px, '../images/sprite.png', 'icon-cheese-main-slider-1', );
+$spritesheet-width: 557px;
+$spritesheet-height: 633px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($icon-logo, $icon-loog-full, );
-$spritesheet: (1752px, 992px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($icon-cheese-main-slider-1, );
+$spritesheet: (557px, 633px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
