--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -9,5 +9,43 @@ block variables
 
 block content
     +header()
+    section.main-index#main-index
+      .main-index-mask
+      .content.main-index-box
+        .main-index-box-slider
+          .main-index-box-slider-el
+            .main-index-box-slider-el-left
+              +icon('cheese-main-slider-1', 'png')
+            .main-index-box-slider-el-right
+              h2 Сыр «Адыгейский»
+              p Это настоящая находка для больших поклонников сыра, которая порадует и оригинальным вкусом, и необычным оформлением. 
+              a(href="#") Подробнее +
+      .main-index-box-control
+        .main-index-box-control-arrows.rouded-buttons-group
+          button.left.bg-white
+            +icon('arrow', 'svg')
+          button.right.bg-white
+            +icon('arrow', 'svg')
+        .main-index-box-control-items
+          .main-index-box-control-items-el.active
+          .main-index-box-control-items-el
+          .main-index-box-control-items-el
+    section.recepts
+      .content.recepts-box
+        .recepts-box-left
+          h2 Рецепты с адыгейским сыром
+          .recepts-box-left-arrows.rouded-buttons-group
+            button.left.bg-additional
+              +icon('arrow', 'svg')
+            button.right.bg-additional
+              +icon('arrow', 'svg')
+          a(href="#") Все рецепты +
+        .recepts-box-right
+          .recepts-box-slider
+            .recepts-box-slider-card
+              .recepts-box-slider-card-text
+                p.title Пирог с адыгейским сыром и брынзой
+                p.time 55 минут
+
     +subscription().bg-white
     +footer().bg-white
